--- a/index.html
+++ b/index.html
@@ -73,6 +73,14 @@
                                 <a href="fifa21.html">
                                 <h5 class="fw-bolder">FIFA 21</h5>
                                 </a>
+                                <!-- Product reviews-->
+                                <div class="d-flex justify-content-center small text-warning mb-2">
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                </div>
                                 <!-- Product price-->
                                 $99.95
                             </div>
@@ -132,6 +140,14 @@
                                 <a href="supermarioodyssey.html">
                                 <h5 class="fw-bolder">Super Mario Odyssey</h5>
                                 </a>
+                                <!-- Product reviews-->
+                                <div class="d-flex justify-content-center small text-warning mb-2">
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                </div>
                                 <!-- Product price-->
                                 <span class="text-muted text-decoration-line-through">$79.95</span>
                                 $69.95
@@ -152,7 +168,9 @@
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
-                                <h5 class="fw-bolder">Xbox One Controller</h5>
+                                <a href="xboxcontroller.html">
+                                <h5 class="fw-bolder">Xbox Wireless Controller</h5>
+                                </a>
                                 <!-- Product reviews-->
                                 <div class="d-flex justify-content-center small text-warning mb-2">
                                     <div class="bi-star-fill"></div>
@@ -184,6 +202,14 @@
                             <div class="text-center">
                                 <!-- Product name-->
                                 <h5 class="fw-bolder">Super Mario Galaxy 2</h5>
+                                <!-- Product reviews-->
+                                <div class="d-flex justify-content-center small text-warning mb-2">
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                </div>
                                 <!-- Product price-->
                                 <span class="text-muted text-decoration-line-through">$49.95</span>
                                 $29.95
@@ -205,6 +231,14 @@
                             <div class="text-center">
                                 <!-- Product name-->
                                 <h5 class="fw-bolder">PS5</h5>
+                                <!-- Product reviews-->
+                                <div class="d-flex justify-content-center small text-warning mb-2">
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                </div>
                                 <!-- Product price-->
                                 $749.95
                             </div>
