--- a/xboxcontroller.html
+++ b/xboxcontroller.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>FIFA 22 - RB Games</title>
+    <title>Xbox Wireless Controller - RB Games</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/RB Games Favicon.png" />
     <!-- Bootstrap icons-->
@@ -19,7 +19,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="#!">RB Games</a>
+            <a class="navbar-brand" href="index.html">RB Games</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -54,17 +54,14 @@
         <div class="container px-4 px-lg-5 my-5">
             <div class="row gx-4 gx-lg-5 align-items-center">
                 <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0"
-                        src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="..." /></div>
+                        src="assets/Xbox Controller 600px.png" alt="Xbox Controller Image" /></div>
                 <div class="col-md-6">
                     <div class="small mb-1">SKU: BST-498</div>
-                    <h1 class="display-5 fw-bolder">Shop item template</h1>
+                    <h1 class="display-5 fw-bolder">Xbox Wireless Controller</h1>
                     <div class="fs-5 mb-5">
-                        <span class="text-decoration-line-through">$45.00</span>
-                        <span>$40.00</span>
+                        <span>$89.95</span>
                     </div>
-                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium at dolorem
-                        quidem modi. Nam sequi consequatur obcaecati excepturi alias magni, accusamus eius blanditiis
-                        delectus ipsam minima ea iste laborum vero?</p>
+                    <p class="lead">The Xbox Wireless Controller is the primary game controller for the Xbox One and Xbox Series X/S home video game consoles, also commercialized for its use in Windows-based PCs, and compatible with other operating systems such as macOS, Linux, iOS and Android. The controller maintains the overall layout found in the Xbox 360 controller, but with various tweaks to its design, such as a revised shape, redesigned analog sticks, shoulder buttons, and triggers, along with new rumble motors within the triggers to allow for directional haptic feedback.</p>
                     <div class="d-flex">
                         <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1"
                             style="max-width: 3rem" />
@@ -84,47 +81,29 @@
             <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                 <div class="col mb-5">
                     <div class="card h-100">
-                        <!-- Product image-->
-                        <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                        <!-- Product details-->
-                        <div class="card-body p-4">
-                            <div class="text-center">
-                                <!-- Product name-->
-                                <h5 class="fw-bolder">Fancy Product</h5>
-                                <!-- Product price-->
-                                $40.00 - $80.00
-                            </div>
-                        </div>
-                        <!-- Product actions-->
-                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-5">
-                    <div class="card h-100">
                         <!-- Sale badge-->
                         <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale
                         </div>
                         <!-- Product image-->
-                        <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                        <img class="card-img-top" src="assets/M&M's Kart Racing 450px.png" alt="M&M's Kart Racing Cover Art" />
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
-                                <h5 class="fw-bolder">Special Item</h5>
+                                <a href="mmkartracing.html">
+                                <h5 class="fw-bolder">M&M's Kart Racing</h5>
+                                </a>
                                 <!-- Product reviews-->
                                 <div class="d-flex justify-content-center small text-warning mb-2">
                                     <div class="bi-star-fill"></div>
-                                    <div class="bi-star-fill"></div>
-                                    <div class="bi-star-fill"></div>
-                                    <div class="bi-star-fill"></div>
-                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star"></div>
+                                    <div class="bi-star"></div>
+                                    <div class="bi-star"></div>
+                                    <div class="bi-star"></div>
                                 </div>
                                 <!-- Product price-->
                                 <span class="text-muted text-decoration-line-through">$20.00</span>
-                                $18.00
+                                $4.95
                             </div>
                         </div>
                         <!-- Product actions-->
@@ -140,15 +119,25 @@
                         <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale
                         </div>
                         <!-- Product image-->
-                        <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                        <img class="card-img-top" src="assets/Smash Bros Cover Art 450px.png" alt="Super Smash Bros Ultimate Cover Art" />
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
-                                <h5 class="fw-bolder">Sale Item</h5>
+                                <a href="supersmashbros.html">
+                                <h5 class="fw-bolder">Super Smash Bros. Ultimate</h5>
+                                </a>
+                                <!-- Product reviews-->
+                                <div class="d-flex justify-content-center small text-warning mb-2">
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                </div>
                                 <!-- Product price-->
-                                <span class="text-muted text-decoration-line-through">$50.00</span>
-                                $25.00
+                                <span class="text-muted text-decoration-line-through">$79.95</span>
+                                $69.95
                             </div>
                         </div>
                         <!-- Product actions-->
@@ -160,13 +149,18 @@
                 </div>
                 <div class="col mb-5">
                     <div class="card h-100">
+                        <!-- Sale badge-->
+                        <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale
+                        </div>
                         <!-- Product image-->
-                        <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                        <img class="card-img-top" src="assets/Super Mario Galaxy 2 Cover Art 450px.png" alt="Super Mario Galaxy 2 Cover Art" />
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
-                                <h5 class="fw-bolder">Popular Item</h5>
+                                <a href="supermariogalaxy2.html">
+                                <h5 class="fw-bolder">Super Mario Galaxy 2</h5>
+                                </a>
                                 <!-- Product reviews-->
                                 <div class="d-flex justify-content-center small text-warning mb-2">
                                     <div class="bi-star-fill"></div>
@@ -176,7 +170,42 @@
                                     <div class="bi-star-fill"></div>
                                 </div>
                                 <!-- Product price-->
-                                $40.00
+                                <span class="text-muted text-decoration-line-through">$49.95</span>
+                                $29.95
+                            </div>
+                        </div>
+                        <!-- Product actions-->
+                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-5">
+                    <div class="card h-100">
+                        <!-- Sale badge-->
+                        <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale
+                        </div>
+                        <!-- Product image-->
+                        <img class="card-img-top" src="assets/Super Mario Odyssey Cover Art 450px.png" alt="Super Mario Odyssey Cover Art" />
+                        <!-- Product details-->
+                        <div class="card-body p-4">
+                            <div class="text-center">
+                                <!-- Product name-->
+                                <a href="supermarioodyssey.html">
+                                <h5 class="fw-bolder">Super Mario Odyssey</h5>
+                                </a>
+                                <!-- Product reviews-->
+                                <div class="d-flex justify-content-center small text-warning mb-2">
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                    <div class="bi-star-fill"></div>
+                                </div>
+                                <!-- Product price-->
+                                <span class="text-muted text-decoration-line-through">$79.95</span>
+                                $69.95
                             </div>
                         </div>
                         <!-- Product actions-->
