--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
                 <div class="col mb-5">
                     <div class="card h-100">
                         <!-- Product image-->
+                        <a href="fifa21.html">
                         <img class="card-img-top" src="assets/FIFA 21 Cover Art 450px.png" alt="FIFA 21 Cover Art" />
+                        </a>
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
@@ -98,7 +100,9 @@
                         <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale
                         </div>
                         <!-- Product image-->
+                        <a href="supersmashbros.html">
                         <img class="card-img-top" src="assets/Smash Bros Cover Art 450px.png" alt="Super Smash Bros Ultimate Cover Art" />
+                        </a>
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
@@ -132,7 +136,9 @@
                         <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale
                         </div>
                         <!-- Product image-->
+                        <a href="supermarioodyssey.html">
                         <img class="card-img-top" src="assets/Super Mario Odyssey Cover Art 450px.png" alt="Super Mario Odyssey Cover Art" />
+                        </a>
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
@@ -163,7 +169,9 @@
                 <div class="col mb-5">
                     <div class="card h-100">
                         <!-- Product image-->
+                        <a href="xboxcontroller.html">
                         <img class="card-img-top" src="assets/Xbox Controller 450px.png" alt="Xbox Controller Image" />
+                        </a>
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
@@ -196,12 +204,16 @@
                         <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale
                         </div>
                         <!-- Product image-->
+                        <a href="supermariogalaxy2.html">
                         <img class="card-img-top" src="assets/Super Mario Galaxy 2 Cover Art 450px.png" alt="Super Mario Galaxy 2 Cover Art" />
+                        </a>
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
+                                <a href="supermariogalaxy2.html">
                                 <h5 class="fw-bolder">Super Mario Galaxy 2</h5>
+                                </a>
                                 <!-- Product reviews-->
                                 <div class="d-flex justify-content-center small text-warning mb-2">
                                     <div class="bi-star-fill"></div>
@@ -225,12 +237,16 @@
                 <div class="col mb-5">
                     <div class="card h-100">
                         <!-- Product image-->
+                        <a href="ps5.html">
                         <img class="card-img-top" src="assets/PS5 450px.png" alt="PS5 Image" />
+                        </a>
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
+                                <a href="ps5.html">
                                 <h5 class="fw-bolder">PS5</h5>
+                                </a>
                                 <!-- Product reviews-->
                                 <div class="d-flex justify-content-center small text-warning mb-2">
                                     <div class="bi-star-fill"></div>
@@ -256,12 +272,16 @@
                         <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale
                         </div>
                         <!-- Product image-->
+                        <a href="mmkartracing.html">
                         <img class="card-img-top" src="assets/M&M's Kart Racing 450px.png" alt="M&M's Kart Racing Cover Art" />
+                        </a>
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
+                                <a href="mmkartracing.html">
                                 <h5 class="fw-bolder">M&M's Kart Racing</h5>
+                                </a>
                                 <!-- Product reviews-->
                                 <div class="d-flex justify-content-center small text-warning mb-2">
                                     <div class="bi-star-fill"></div>
@@ -285,12 +305,16 @@
                 <div class="col mb-5">
                     <div class="card h-100">
                         <!-- Product image-->
+                        <a href="supersmashbrosmelee.html">
                         <img class="card-img-top" src="assets/Super Smash Bros Melee Cover Art 450px.png" alt="Super Smash Bros Melee Cover Art" />
+                        </a>
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
+                                <a href="supersmashbrosmelee.html">
                                 <h5 class="fw-bolder">Super Smash Bros. Melee</h5>
+                                </a>
                                 <!-- Product reviews-->
                                 <div class="d-flex justify-content-center small text-warning mb-2">
                                     <div class="bi-star-fill"></div>
