--- a/mmkartracing.html
+++ b/mmkartracing.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>FIFA 21 - RB Games</title>
+    <title>M&M's Kart Racing - RB Games</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/RB Games Favicon.png" />
     <!-- Bootstrap icons-->
@@ -85,12 +85,16 @@
                         <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale
                         </div>
                         <!-- Product image-->
+                        <a href="mmkartracing.html">
                         <img class="card-img-top" src="assets/M&M's Kart Racing 450px.png" alt="M&M's Kart Racing Cover Art" />
+                        </a>
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
+                                <a href="mmkartracing.html">
                                 <h5 class="fw-bolder">M&M's Kart Racing</h5>
+                                </a>
                                 <!-- Product reviews-->
                                 <div class="d-flex justify-content-center small text-warning mb-2">
                                     <div class="bi-star-fill"></div>
@@ -117,7 +121,9 @@
                         <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale
                         </div>
                         <!-- Product image-->
+                        <a href="supersmashbros.html">
                         <img class="card-img-top" src="assets/Smash Bros Cover Art 450px.png" alt="Super Smash Bros Ultimate Cover Art" />
+                        </a>
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
@@ -151,12 +157,16 @@
                         <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale
                         </div>
                         <!-- Product image-->
+                        <a href="supermariogalaxy2.html">
                         <img class="card-img-top" src="assets/Super Mario Galaxy 2 Cover Art 450px.png" alt="Super Mario Galaxy 2 Cover Art" />
+                        </a>
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
+                                <a href="supermariogalaxy2.html">
                                 <h5 class="fw-bolder">Super Mario Galaxy 2</h5>
+                                </a>
                                 <!-- Product reviews-->
                                 <div class="d-flex justify-content-center small text-warning mb-2">
                                     <div class="bi-star-fill"></div>
@@ -183,7 +193,9 @@
                         <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale
                         </div>
                         <!-- Product image-->
+                        <a href="supermarioodyssey.html">
                         <img class="card-img-top" src="assets/Super Mario Odyssey Cover Art 450px.png" alt="Super Mario Odyssey Cover Art" />
+                        </a>
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
