--- a/supersmashbrosmelee.html
+++ b/supersmashbrosmelee.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Super Smash Bros. Ultimate - RB Games</title>
+    <title>Super Smash Bros. Melee - RB Games</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/RB Games Favicon.png" />
     <!-- Bootstrap icons-->
@@ -54,15 +54,14 @@
         <div class="container px-4 px-lg-5 my-5">
             <div class="row gx-4 gx-lg-5 align-items-center">
                 <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0"
-                        src="assets/Smash Bros Cover Art 600px.png" alt="Super Smash Bros. Ultimate Cover Art" /></div>
+                        src="assets/FIFA 21 Cover Art 600px.png" alt="FIFA 21 Cover Art" /></div>
                 <div class="col-md-6">
                     <div class="small mb-1">SKU: BST-498</div>
-                    <h1 class="display-5 fw-bolder">Super Smash Bros. Ultimate</h1>
+                    <h1 class="display-5 fw-bolder">FIFA 21</h1>
                     <div class="fs-5 mb-5">
-                        <span class="text-muted text-decoration-line-through">$79.95</span>
-                                $69.95
+                        <span>$99.95</span>
                     </div>
-                    <p class="lead">Super Smash Bros. Ultimate is a 2018 crossover fighting game developed by Bandai Namco Studios and Sora Ltd. and published by Nintendo for the Nintendo Switch. It is the fifth installment in the Super Smash Bros. series, succeeding Super Smash Bros. for Nintendo 3DS and Wii U. The game follows the series' traditional style of gameplay: controlling one of the various characters, players must use differing attacks to weaken their opponents and knock them out of an arena. It features a wide variety of game modes, including a campaign for single-player and multiplayer versus modes.</p>
+                    <p class="lead">FIFA 21 is an association football simulation video game published by Electronic Arts as part of the FIFA series. It is the 28th installment in the FIFA series, and was released on 9 October 2020 for Microsoft Windows, Nintendo Switch, PlayStation 4 and Xbox One. Enhanced versions for the PlayStation 5 and Xbox Series X and Series S were released on 3 December 2020, in addition to a version for Stadia in March 2021.</p>
                     <div class="d-flex">
                         <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1"
                             style="max-width: 3rem" />
